# YOLOPoint

./: .gitignore  CMakeLists.txt  README.md  download_coco_points.sh  package.xml  requirements-ros.txt  requirements.txt
configs/: coco.yaml  coco_export.yaml  concat_datasets.yaml  evaluation.yaml  hpatches.yaml  kitti.yaml  kitti_export.yaml  kitti_inference.yaml
datasets/coco/: images640
datasets/coco/points_export_640/train/: 000000000009.npz  000000000025.npz  000000000030.npz  000000000034.npz  000000000036.npz  000000000042.npz  000000000049.npz  000000000061.npz  000000000064.npz  000000000071.npz  000000000072.npz  000000000073.npz  000000000074.npz  000000000077.npz  000000000078.npz  000000000081.npz  000000000086.npz  000000000089.npz  000000000092.npz  000000000094.npz  000000000109.npz  000000000110.npz  000000000113.npz  000000000127.npz  000000000133.npz  000000000136.npz  000000000138.npz  000000000142.npz  000000000143.npz  000000000144.npz  000000000149.npz  000000000151.npz  000000000154.npz  000000000164.npz  000000000165.npz  000000000192.npz  000000000194.npz  000000000196.npz  000000000201.npz  000000000208.npz  (+118242 more)
datasets/coco/points_export_640/val/: 000000000139.npz  000000000285.npz  000000000632.npz  000000000724.npz  000000000776.npz  000000000785.npz  000000000802.npz  000000000872.npz  000000000885.npz  000000001000.npz  000000001268.npz  000000001296.npz  000000001353.npz  000000001425.npz  000000001490.npz  000000001503.npz  000000001532.npz  000000001584.npz  000000001675.npz  000000001761.npz  000000001818.npz  000000001993.npz  000000002006.npz  000000002149.npz  000000002153.npz  000000002157.npz  000000002261.npz  000000002299.npz  000000002431.npz  000000002473.npz  000000002532.npz  000000002587.npz  000000002592.npz  000000002685.npz  000000002923.npz  000000003156.npz  000000003255.npz  000000003501.npz  000000003553.npz  000000003661.npz  (+4960 more)
launch/: surround_all.launch  yolopoint.launch
src/: check_dataset.py  demo.py  demo_ROS.py  demo_ROS_listener.py  evaluation.py  evaluation_hpatches.py  export_descriptor.py  export_homography.py  train.py  yolopoint_ros.py
src/datasets/: DataClasses.py  __init__.py
src/evaluations/: descriptor_evaluation.py  detector_evaluation.py  yolo_evaluation.py
src/models/: SuperPointNet.py  YOLOPoint.py  __init__.py  common.py  model_wrap.py  yolo.py
src/ros_messages/keypoint_msg/: CMakeLists.txt  package.xml
src/ros_messages/keypoint_msg/msg/: KeypointArray.msg
src/ros_messages/object_msgs/: CMakeLists.txt  package.xml  setup.py
src/ros_messages/object_msgs/include/object_msgs/: covariance_helper.h
src/ros_messages/object_msgs/msg/: MotionType.msg  Object.msg  ObjectClass.msg  ObjectClassEstimate.msg  ObjectDimension.msg  ObjectStateIndex.msg  Objects.msg  Pose32.msg  Pose64.msg  ReferencePointType.msg
src/ros_messages/object_msgs/src/object_msgs/: covariance_helper.py
src/utils/: augmentations_yolo.py  debug.py  draw.py  general_yolo.py  homographies.py  loader.py  loss_functions.py  metrics_yolo.py  photometric.py  plots_yolo.py  torch_utils_yolo.py  utils.py
templates/: README.md
